--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -3,6 +3,12 @@ nav {
   ul {
     li {
       display: inline-block;
+      padding: 1rem;
+      a {
+        text-transform: uppercase;
+        text-decoration: none;
+        font-weight: bold;
+      }
     }
   }
 }
