--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,4 +7,10 @@ nav {
 }
 nav ul li {
   display: inline-block;
+  padding: 1rem;
+}
+nav ul li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
 }/*# sourceMappingURL=styles.css.map */
