Alterado cores dos links

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -2,6 +2,6 @@
 $fonte: 'Roboto', sans-serif;
 
 //Cores
-$cor-primaria:'';
-$cor-secundaria:'';
-$cor-terciaria:'';
+$cor-primaria:#495371;
+$cor-secundaria:#74959A;
+$cor-terciaria:#F1E0AC;
