--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -1,4 +1,4 @@
-@import '../abstract/variaveis';
+@import "../abstract/variaveis";
 
 nav {
   text-align: center;
@@ -12,8 +12,10 @@ nav {
         text-decoration: none;
         font-weight: bold;
         color: $cor-primaria;
-
-        
+        &:hover {
+          border-bottom: 2px solid $cor-secundaria;
+          padding-bottom: 3px;
+        }
       }
     }
   }
