--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,4 +14,8 @@ nav ul li a {
   text-decoration: none;
   font-weight: bold;
   color: #495371;
+}
+nav ul li a:hover {
+  border-bottom: 2px solid #74959A;
+  padding-bottom: 3px;
 }/*# sourceMappingURL=styles.css.map */
