--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,4 +18,9 @@ nav ul li a {
 nav ul li a:hover {
   border-bottom: 2px solid #74959A;
   padding-bottom: 3px;
+}
+
+.banner {
+  background: url(../../imagens/banner.jpeg) 27% center no-repeat;
+  min-height: 350px;
 }/*# sourceMappingURL=styles.css.map */
