--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -12,5 +12,14 @@
     padding: 3rem;
     background-color: $cor-terciaria;
     opacity: 0.9;
+    border-radius: 20px;
   }
+    h1{
+        font-size: 3rem;
+        color: $cor-primaria;
+    }
+    h2{
+        font-size: 1.5rem;
+        color: $cor-secundaria;
+    }
 }
