muda a cor terciaria das variaveis, adiciona h1 e h2

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -4,4 +4,4 @@ $fonte: 'Roboto', sans-serif;
 //Cores
 $cor-primaria:#495371;
 $cor-secundaria:#74959A;
-$cor-terciaria:#F1E0AC;
+$cor-terciaria:#EEF2F7;
