tamanho do texto as variaveis

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -1,7 +1,10 @@
 //Fontes
-$fonte: 'Roboto', sans-serif;
+$fonte: "Roboto", sans-serif;
 
 //Cores
-$cor-primaria:#495371;
-$cor-secundaria:#74959A;
-$cor-terciaria:#F1E0AC;
+$cor-primaria: #495371;
+$cor-secundaria: #74959a;
+$cor-terciaria: #f1e0ac;
+
+//tamanho das fontes
+$tamanhho-do-texto: 3rem;
