--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,4 +60,19 @@ nav ul li a:hover {
   font-size: 2.3076923077rem;
   margin-bottom: 80px;
   font-weight: 300;
+}
+#servicos .cards {
+  display: flex;
+  justify-content: space-evenly;
+}
+#servicos .cards .card {
+  width: 360px;
+  text-align: center;
+}
+#servicos .cards .card .img-container {
+  padding-bottom: 2px;
+  border-bottom: 6px solid #74959A;
+}
+#servicos .cards .card .img-container img {
+  max-width: 100%;
 }/*# sourceMappingURL=styles.css.map */
