variaveis tamanho das fontes

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -5,3 +5,6 @@ $fonte: "Roboto", sans-serif;
 $cor-primaria:#495371;
 $cor-secundaria:#74959A;
 $cor-terciaria:#EEF2F7;
+
+//tamanho das fontes
+$tamanhho-do-texto: 3rem;
