--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,4 +42,22 @@ nav ul li a:hover {
 .banner h2 {
   font-size: 1.5rem;
   color: #74959A;
+}
+
+#servicos {
+  margin: 80px;
+}
+#servicos h4 {
+  font-size: 1.2rem;
+  color: #74959A;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+  margin: 1rem;
+}
+#servicos h3 {
+  text-align: center;
+  font-size: 2.3076923077rem;
+  margin-bottom: 80px;
+  font-weight: 300;
 }/*# sourceMappingURL=styles.css.map */
