--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -2,4 +2,18 @@
 
 #servicos {
   margin: 80px;
+  h4 {
+    font-size: $tamanhho-do-texto / 2.5;
+    color: $cor-secundaria;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: center;
+    margin: 1rem;
+  }
+  h3 {
+    text-align: center;
+    font-size: $tamanhho-do-texto / 1.3;
+    margin-bottom: 80px;
+    font-weight: 300;
+  }
 }
