--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,7 +1,7 @@
 @import '../abstract/variaveis';
 
 .banner {
-  background: url(../../imagens/banner.jpg) 100% no-repeat;
+  background: url(../../imagens/spa.png) 100% no-repeat;
   min-height: 500px;
   background-size: cover;
   display: flex;
