--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -2,7 +2,16 @@
 
 nav {
   text-align: center;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6) ;
+  
+
   ul {
+    
+
     li {
       display: inline-block;
       padding: 1rem;
@@ -12,6 +21,7 @@ nav {
         text-decoration: none;
         font-weight: bold;
         color: $cor-primaria;
+
         &:hover {
           border-bottom: 2px solid $cor-secundaria;
           padding-bottom: 3px;
