--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@ html, body {
 
 nav {
   text-align: center;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 nav ul li {
   display: inline-block;
