--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -23,6 +23,20 @@
     .card {
       width:360px;
       text-align: center;
+      h5 {
+        font-size: $tamanhho-do-texto / 1.5;
+        font-weight: 300;
+        margin-top: 25px;
+        margin-bottom: 20px;
+        color: $cor-primaria;
+
+        p {
+          font-size: $tamanhho-do-texto / 3;
+          font-weight: 300;
+          color: $cor-primaria;
+          line-height: 1.25rem;
+        }
+      }
       .img-container {
         padding-bottom: 2px;
         border-bottom: 6px solid $cor-secundaria;
