--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,19 @@ nav ul li a:hover {
   width: 360px;
   text-align: center;
 }
+#servicos .cards .card h5 {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  color: #495371;
+}
+#servicos .cards .card h5 p {
+  font-size: 1rem;
+  font-weight: 300;
+  color: #495371;
+  line-height: 1.25rem;
+}
 #servicos .cards .card .img-container {
   padding-bottom: 2px;
   border-bottom: 6px solid #74959A;
