change variaveis cores

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -2,8 +2,8 @@
 $fonte: "Roboto", sans-serif;
 
 //Cores
-$cor-primaria:#495371;
-$cor-secundaria:#74959A;
+$cor-primaria:#48512D;
+$cor-secundaria:#969889;
 $cor-terciaria:#EEF2F7;
 
 //tamanho das fontes
