add component cupom

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -1,5 +1,5 @@
 //Fontes
-$fonte: "Roboto", sans-serif;
+$fonte: "EB Garamond", sans-serif;
 
 //Cores
 $cor-primaria:#48512D;
@@ -7,4 +7,4 @@ $cor-secundaria:#969889;
 $cor-terciaria:#EEF2F7;
 
 //tamanho das fontes
-$tamanhho-do-texto: 3rem;
+$tamanho-do-texto: 3rem;
