--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -5,21 +5,24 @@
   min-height: 500px;
   background-size: cover;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.85;
+  justify-content: left;
+  align-items:center;
+  opacity: 0.9;
   .inner-banner {
-    padding: 3rem;
+    padding:4em;
+            
+    
     background-color: $cor-terciaria;
-    opacity: 0.9;
-    border-radius: 20px;
+    background: linear-gradient(rgba(190, 189, 189, 0.214), rgba(255, 255, 255, 0.423), rgba(189, 12, 12, 0));
+    border-radius: 6px;
+    
   }
     h1{
-        font-size: 3rem;
+        font-size: 4rem;
         color: $cor-primaria;
     }
     h2{
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: $cor-secundaria;
     }
 }
