--- a/styles/components/_cupom.scss
+++ b/styles/components/_cupom.scss
@@ -1,7 +1,37 @@
-@import '../abstract/variaveis';
+@import "../abstract/variaveis";
 
 #cupom {
-    background-color: $cor-terciaria;
-    padding:4rem;
-    text-align: center;
+  background-color: $cor-terciaria;
+  padding: 4rem;
+  text-align: center;
+  .texto {
+    color: $cor-primaria;
+    h2 {
+      margin: 2rem;
+      font-size: $tamanho-do-texto/2;
+    }
+  }
+
+  .input {
+    margin: 0 auto;
+    width: 500px;
+    height:35px;
+    border-radius: 20px;
+    border: 4px solid white;
+    input {
+    margin: 0 auto;
+      border-radius: 20px;
+      height:35px;
+      border: none;
+      width: 500px;
+      outline: none;
+      text-align: center;
+      font-size: 26px;
+    }
+    &:hover,
+    &:focus-within {
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+        outline:none;
+    }
+  }
 }
