--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -3,18 +3,19 @@
 #servicos {
   margin: 80px;
   h4 {
-    font-size: $tamanhho-do-texto / 2.5;
+    font-size: $tamanho-do-texto / 2.5;
     color: $cor-secundaria;
     text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 400;
     text-align: center;
     margin: 1rem;
   }
   h3 {
     text-align: center;
-    font-size: $tamanhho-do-texto / 1.3;
+    font-size: $tamanho-do-texto / 1.3;
     margin-bottom: 80px;
     font-weight: 300;
+    color: $cor-primaria;
   }
 
   .cards {
@@ -24,17 +25,17 @@
       width:360px;
       text-align: center;
       h5 {
-        font-size: $tamanhho-do-texto / 1.5;
+        font-size: $tamanho-do-texto / 1.5;
         font-weight: 300;
         margin-top: 25px;
         margin-bottom: 20px;
         color: $cor-primaria;
 
         p {
-          font-size: $tamanhho-do-texto / 3;
+          font-size: $tamanho-do-texto / 3;
           font-weight: 300;
           color: $cor-primaria;
-          line-height: 1.25rem;
+          line-height: 3rem;
         }
       }
       .img-container {
