--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 html, body {
-  font-family: "Roboto", sans-serif;
+  font-family: "EB Garamond", sans-serif;
 }
 
 nav {
@@ -8,7 +8,7 @@ nav {
   z-index: 10;
   left: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 nav ul li {
   display: inline-block;
@@ -30,22 +30,22 @@ nav ul li a:hover {
   min-height: 500px;
   background-size: cover;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  opacity: 0.85;
+  opacity: 0.9;
 }
 .banner .inner-banner {
-  padding: 3rem;
+  padding: 4em;
   background-color: #EEF2F7;
-  opacity: 0.9;
-  border-radius: 20px;
+  background: linear-gradient(rgba(190, 189, 189, 0.214), rgba(255, 255, 255, 0.423), rgba(189, 12, 12, 0));
+  border-radius: 6px;
 }
 .banner h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   color: #48512D;
 }
 .banner h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #969889;
 }
 
@@ -56,7 +56,7 @@ nav ul li a:hover {
   font-size: 1.2rem;
   color: #969889;
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: 400;
   text-align: center;
   margin: 1rem;
 }
@@ -65,6 +65,7 @@ nav ul li a:hover {
   font-size: 2.3076923077rem;
   margin-bottom: 80px;
   font-weight: 300;
+  color: #48512D;
 }
 #servicos .cards {
   display: flex;
@@ -85,7 +86,7 @@ nav ul li a:hover {
   font-size: 1rem;
   font-weight: 300;
   color: #48512D;
-  line-height: 1.25rem;
+  line-height: 3rem;
 }
 #servicos .cards .card .img-container {
   padding-bottom: 2px;
@@ -99,4 +100,32 @@ nav ul li a:hover {
   background-color: #EEF2F7;
   padding: 4rem;
   text-align: center;
+}
+#cupom .texto {
+  color: #48512D;
+}
+#cupom .texto h2 {
+  margin: 2rem;
+  font-size: 1.5rem;
+}
+#cupom .input {
+  margin: 0 auto;
+  width: 500px;
+  height: 35px;
+  border-radius: 20px;
+  border: 4px solid white;
+}
+#cupom .input input {
+  margin: 0 auto;
+  border-radius: 20px;
+  height: 35px;
+  border: none;
+  width: 500px;
+  outline: none;
+  text-align: center;
+  font-size: 26px;
+}
+#cupom .input:hover, #cupom .input:focus-within {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  outline: none;
 }/*# sourceMappingURL=styles.css.map */
