--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -10,11 +10,12 @@
   opacity: 0.9;
   .inner-banner {
     padding:4em;
-            
+    border:none;
+          
     
     background-color: $cor-terciaria;
     background: linear-gradient(rgba(190, 189, 189, 0.214), rgba(255, 255, 255, 0.423), rgba(189, 12, 12, 0));
-    border-radius: 6px;
+    
     
   }
     h1{
