--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -25,6 +25,12 @@
       width:360px;
       text-align: center;
       font-size: $tamanho-do-texto / 2.2;
+      &:hover {
+        transform: scale(1.03);
+        transition: 0.6s ease-in-out;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+        border-radius: 1rem;
+      }
       h5 {
         font-size: $tamanho-do-texto / 1.5;
         font-weight: 300;
