mudanca das sections

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -3,7 +3,7 @@ $fonte: "EB Garamond", sans-serif;
 
 //Cores
 $cor-primaria:#48512D;
-$cor-secundaria:#969889;
+$cor-secundaria:#64655b;
 $cor-terciaria:#EEF2F7;
 
 //tamanho das fontes
