--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,5 +3,5 @@
 @import "./components/banner";
 @import "./components/servicos";
 @import  "./components/cupom";
-@import "./components/curisosidades";
+@import "./components/produtos";
 @import "./components/_footer.sass"
