--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -1,7 +1,8 @@
 @import "../abstract/variaveis";
 
-#curiosidades {
+#produtos {
   h3 {
+    margin-top: 80px;
     font-size: $tamanho-do-texto / 2.2;
     color: $cor-secundaria;
     text-transform: uppercase;
@@ -12,9 +13,10 @@
   h4 {
     text-align: center;
     font-size: $tamanho-do-texto / 1.3;
-    margin-bottom: 80px;
+    margin-bottom: 20px;
     font-weight: 300;
     color: $cor-primaria;
+    
   }
 
   p {
@@ -23,5 +25,11 @@
     font-weight: 300;
     color: $cor-primaria;
     line-height: 3rem;
+  }
+  .produto-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+    
   }
 }
