ajustes nos cards

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -2,9 +2,9 @@
 $fonte: "EB Garamond", sans-serif;
 
 //Cores
-$cor-primaria:#48512D;
+$cor-primaria:#566134;
 $cor-secundaria:#64655b;
-$cor-terciaria:#EEF2F7;
+$cor-terciaria:#e9f1ec;
 
 //tamanho das fontes
 $tamanho-do-texto: 3rem;
