--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -21,15 +21,23 @@
   .cards {
     display: flex;
     justify-content: space-evenly;
+    background-color: #eef9f393;
+    
+    gap: 3rem;
+    width:100%;
+
     .card {
-      width:360px;
+      width:400px;
       text-align: center;
+      padding-bottom: 1.5rem;
       font-size: $tamanho-do-texto / 2.2;
+      border: 1px solid rgba(255, 255, 255, 0.342);
       &:hover {
-        transform: scale(1.03);
-        transition: 0.6s ease-in-out;
+        transform: scale(1.01);
+        transition: 0.6s ease-in-out 100ms;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-        border-radius: 1rem;
+        border-bottom-left-radius: 0.3rem;
+        border-bottom-right-radius: 0.3rem;
       }
       h5 {
         font-size: $tamanho-do-texto / 1.5;
@@ -37,17 +45,18 @@
         margin-top: 25px;
         margin-bottom: 20px;
         color: $cor-primaria;
-
-        p {
-          font-size: $tamanho-do-texto / 3;
-          font-weight: 300;
-          color: $cor-primaria;
-          line-height: 3rem;
-        }
       }
+        p {
+          font-size: $tamanho-do-texto / 2;
+          font-weight: 300;
+          color: $cor-secundaria;
+          line-height: 2rem;
+          
+        }
+      
       .img-container {
-        padding-bottom: 2px;
-        border-bottom: 6px solid $cor-secundaria;
+        padding-bottom: 4px;
+        border-bottom: 2px solid $cor-secundaria;
         img{
           max-width: 100%;
         }
