add slides produtos

--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,9 +1,9 @@
 @import '../abstract/variaveis';
 
 .banner {
-  background: url(../../imagens/spa.png) 100% no-repeat;
-  min-height: 500px;
-  background-size: cover;
+  background: url(../../imagens/banner3.jpg) 100% no-repeat;
+  min-height: 400px;
+  background-size:cover;
   display: flex;
   justify-content: center;
   align-items:center;
