--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "./components/navbar";
 @import "./components/banner";
 @import "./components/servicos";
-@import  "./components/cupom";
+@import "./components/cupom";
 @import "./components/produtos";
-@import "./components/_footer.sass"
+@import "./components/_footer.sass";
+@import "./components/swipper";
