--- a/styles/components/_swipper.scss
+++ b/styles/components/_swipper.scss
@@ -4,8 +4,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width: 100%;
+    margin-block: 40px;
+    
+    
+    
+    
+    
+
+    .slides {
+        margin: 0 auto;
+        overflow: hidden;
+        width: 800px;
+        height: 427px;
+        
+        
+    }
     
 
 }
