--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -34,4 +34,19 @@
     margin-bottom: 80px;
   }
   
+  .images {
+    width: 600px;
+    height: 427px;
+    overflow: hidden;
+    position:relative;
+
+    .glide__bullets {
+      position: absolute;
+      color: #000;
+      bottom: 5%;
+      left: 45%;
+      padding:5px;
+    }
+  }
+ 
 }
