--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -33,20 +33,29 @@
     justify-content: center;
     margin-bottom: 80px;
   }
-  
-  .images {
-    width: 600px;
-    height: 427px;
-    overflow: hidden;
-    position:relative;
+  .glide__slides {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100vw !important;
+
+    .glide__slide {
+      position: relative;
+      width: 640px;
+      height: 427px;
+    }
 
     .glide__bullets {
       position: absolute;
       color: #000;
-      bottom: 5%;
-      left: 45%;
-      padding:5px;
+
+      bottom: 20%;
+      left: 65%;
+      padding: 5px;
+      .glide__bullet {
+        width: 40px;
+      }
     }
   }
- 
 }
