--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -33,28 +33,28 @@
     justify-content: center;
     margin-bottom: 80px;
   }
-  .glide__slides {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .images {
+    position: relative;
+    width: 640px;
+    height: 427px;
 
-    width: 100vw !important;
+    .glide__slides {
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-    .glide__slide {
-      position: relative;
-      width: 640px;
-      height: 427px;
-    }
+      
 
-    .glide__bullets {
-      position: absolute;
-      color: #000;
-
-      bottom: 20%;
-      left: 65%;
-      padding: 5px;
-      .glide__bullet {
-        width: 40px;
+      
+      .glide__bullets {
+        position: absolute;
+        color: #000;
+        bottom: 0;
+        left: 65%;
+        padding: 5px;
+        .glide__bullet {
+          width: 40px;
+        }
       }
     }
   }
