--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,25 +197,24 @@ nav ul li a:hover {
   justify-content: center;
   margin-bottom: 80px;
 }
-#produtos .glide__slides {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw !important;
-}
-#produtos .glide__slides .glide__slide {
+#produtos .images {
   position: relative;
   width: 640px;
   height: 427px;
 }
-#produtos .glide__slides .glide__bullets {
+#produtos .images .glide__slides {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#produtos .images .glide__slides .glide__bullets {
   position: absolute;
   color: #000;
-  bottom: 20%;
+  bottom: 0;
   left: 65%;
   padding: 5px;
 }
-#produtos .glide__slides .glide__bullets .glide__bullet {
+#produtos .images .glide__slides .glide__bullets .glide__bullet {
   width: 40px;
 }
 
