--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -25,27 +25,20 @@
     color: $cor-primaria;
     line-height: 3rem;
   }
-  .produto-container {
-    display: flex;
-    margin: 0 auto;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 80px;
 
-    .img-slider {
-      position: relative;
-      width: 800px;
-      height: 500px;
+  .img-slider {
+    position: relative;
+    width: 800px;
+    height: 500px;
 
-      .slide {
-        z-index: 1;
-        position: absolute;
+    .slide {
+      z-index: 1;
+      position: absolute;
+      width: 100%;
+      .produtoImagem {
         width: 100%;
-
         img {
-          width: 100%;
-          border-radius: 5px;
+          border-radius: 10px;
         }
       }
     }
