--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -25,20 +25,34 @@
     color: $cor-primaria;
     line-height: 3rem;
   }
+  .img-slider-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  .img-slider {
-    position: relative;
-    width: 800px;
-    height: 500px;
+    .img-slider {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      width: 800px;
+      height: 500px;
 
-    .slide {
-      z-index: 1;
-      position: absolute;
-      width: 100%;
-      .produtoImagem {
-        width: 100%;
-        img {
+      .slide {
+        z-index: 1;
+        position: absolute;
+        width: 600px;
+        height: 427px;
+        .img {
+          width: 100%;
           border-radius: 10px;
+        }
+        .info {
+          position: absolute;
+          top: 0;
+          color: white;
+          padding: 15px 30px;
+
         }
       }
     }
