--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -25,36 +25,66 @@
     color: $cor-primaria;
     line-height: 3rem;
   }
-  .img-slider-wrapper {
+}
+.img-slider-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .img-slider {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    width: 800px;
+    height: 500px;
 
-    .img-slider {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      width: 800px;
-      height: 500px;
-
-      .slide {
-        z-index: 1;
+    .slide {
+      z-index: 1;
+      position: absolute;
+      width: 600px;
+      height: 427px;
+      .img {
+        width: 100%;
+        border-radius: 10px;
+      }
+      .info {
         position: absolute;
-        width: 600px;
-        height: 427px;
-        .img {
-          width: 100%;
-          border-radius: 10px;
+        bottom: 0;
+        color: white;
+        padding: 15px 30px;
+        h2 {
+          color: $cor-terciaria;
+          font-size: 45px;
+          text-transform: uppercase;
+          font-weight: 600;
+          letter-spacing: 3px;
         }
-        .info {
-          position: absolute;
-          top: 0;
-          color: white;
-          padding: 15px 30px;
-
+        .slide-p {
+          color: $cor-terciaria !important;
+          background: rgba(0, 0, 0, 0.1) !important;
+          font-size: 20px !important;
+          padding: 10px !important;
+          text-align: left !important;
         }
       }
+    }
+
+    .navigation {
+      z-index:2;
+      position: absolute;
+      display: flex;
+      bottom: 40px;
+      left:50%;
+      transform: translateX(-50%);
+        .btn{
+          background: rgba(255,255,255,0.5);
+          width:12px;
+          height:12px;
+          margin:10px;
+          border-radius: 50%;
+          cursor: pointer;
+        }
     }
   }
 }
