--- a/styles/components/_cupom.scss
+++ b/styles/components/_cupom.scss
@@ -54,8 +54,65 @@
         border-color:#a7d8bb;
     }
 
-
-
-
 }
+}
+
+@media (max-width: 480px) {
+  #cupom {
+    background-color: $cor-terciaria;
+    padding: 0.5rem;
+   
+    text-align: center;
+    .texto {
+      
+      h2 {
+        margin-block:2rem;;
+        font-size: $tamanho-do-texto/2;
+      }
+    }
+  
+    .input {
+      margin: 0 auto;
+      width: 250px;
+      height:35px;
+      border-radius: 20px;
+      border: 4px solid white;
+      input {
+      margin: 0 auto;
+        border-radius: 20px;
+        height:35px;
+        border: none;
+        width: 250px;
+        outline: none;
+        text-align: center;
+        font-size: 26px;
+      }
+      &:hover,
+      &:focus-within {
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+          outline:none;
+      }
+    }
+    button {
+      text-transform: uppercase;
+      margin-block: .75rem;
+      outline: none;
+      height: 40px;
+      text-align: center;
+      width:130px;
+      background-color: #c8e3d7;
+      border: 1px solid#d8e7cd;
+      color:$cor-primaria;
+      letter-spacing: 1px;
+      font-size: 12px;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 40px;
+      &:hover {
+          background-color:#b3dac7;
+          border-color:#a7d8bb;
+      }
+  
+  }
+  }
 }
