--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,27 @@ nav ul li a:hover {
   color: #64655b;
 }
 
+@media (max-width: 480px) {
+  .banner {
+    background: url(../../imagens/banner3.jpg) 100% no-repeat;
+    min-height: 200px;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .banner .inner-banner {
+    padding: 1em;
+    border: 1px solid rgba(156, 155, 155, 0.103);
+  }
+  .banner h1 {
+    font-size: 2rem;
+  }
+  .banner h2 {
+    font-size: 1rem;
+    color: #64655b;
+  }
+}
 #servicos {
   margin: 80px;
 }
@@ -66,7 +87,7 @@ nav ul li a:hover {
 }
 #servicos h3 {
   text-align: center;
-  font-size: 2.3076923077rem;
+  font-size: 1.6666666667rem;
   margin-bottom: 80px;
   font-weight: 300;
   color: #566134;
@@ -113,6 +134,69 @@ nav ul li a:hover {
   max-width: 100%;
 }
 
+@media (max-width: 480px) {
+  #servicos {
+    margin: 50px;
+  }
+  #servicos h3 {
+    text-align: center;
+    font-size: 1.6666666667rem;
+    margin-bottom: 80px;
+    font-weight: 300;
+    color: #566134;
+  }
+  #servicos h4 {
+    font-size: 1.3636363636rem;
+    color: #64655b;
+    text-transform: uppercase;
+    font-weight: 400;
+    text-align: center;
+    margin: 1rem;
+  }
+  #servicos .cards {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(238, 249, 243, 0.5764705882);
+    gap: 3rem;
+    width: 100%;
+  }
+  #servicos .cards .card {
+    width: 300px;
+    text-align: center;
+    padding-bottom: 1.5rem;
+    font-size: 1.1111111111rem;
+    border: 1px solid rgba(255, 255, 255, 0.342);
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
+    border-bottom-left-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+  }
+  #servicos .cards .card:hover {
+    transition: 0.6s ease-in-out 100ms;
+    box-shadow: rgba(0, 0, 0, 0.307) 2px 10px 16px;
+  }
+  #servicos .cards .card h5 {
+    font-size: 2rem;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    color: #566134;
+  }
+  #servicos .cards .card p {
+    font-size: 1.3636363636rem;
+    font-weight: 300;
+    color: #64655b;
+    line-height: 2rem;
+  }
+  #servicos .cards .card .img-container {
+    padding-bottom: 3px;
+    border-bottom: 2px solid #64655b;
+  }
+  #servicos .cards .card .img-container img {
+    max-width: 100%;
+  }
+}
 #cupom {
   background-color: #e9f1ec;
   padding: 4rem;
@@ -167,8 +251,60 @@ nav ul li a:hover {
   border-color: #a7d8bb;
 }
 
+@media (max-width: 480px) {
+  #cupom {
+    background-color: #e9f1ec;
+    padding: 0.5rem;
+    text-align: center;
+  }
+  #cupom .texto h2 {
+    margin-block: 2rem;
+    font-size: 1.5rem;
+  }
+  #cupom .input {
+    margin: 0 auto;
+    width: 250px;
+    height: 35px;
+    border-radius: 20px;
+    border: 4px solid white;
+  }
+  #cupom .input input {
+    margin: 0 auto;
+    border-radius: 20px;
+    height: 35px;
+    border: none;
+    width: 250px;
+    outline: none;
+    text-align: center;
+    font-size: 26px;
+  }
+  #cupom .input:hover, #cupom .input:focus-within {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    outline: none;
+  }
+  #cupom button {
+    text-transform: uppercase;
+    margin-block: 0.75rem;
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    background-color: #c8e3d7;
+    border: 1px solid #d8e7cd;
+    color: #566134;
+    letter-spacing: 1px;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 40px;
+  }
+  #cupom button:hover {
+    background-color: #b3dac7;
+    border-color: #a7d8bb;
+  }
+}
 #produtos h3 {
-  margin-top: 80px;
+  margin-top: 70px;
   font-size: 1.3636363636rem;
   color: #64655b;
   text-transform: uppercase;
@@ -184,11 +320,11 @@ nav ul li a:hover {
   color: #566134;
 }
 #produtos p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-align: center;
   font-weight: 300;
   color: #566134;
-  line-height: 3rem;
+  line-height: 2rem;
 }
 
 .img-slider-wrapper {
@@ -201,18 +337,17 @@ nav ul li a:hover {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 800px;
-  height: 500px;
+  width: 70px;
 }
 .img-slider-wrapper .img-slider .slide {
   z-index: 1;
   position: absolute;
-  width: 600px;
-  height: 427px;
 }
 .img-slider-wrapper .img-slider .slide .img {
+  max-width: 100%;
   width: 100%;
   border-radius: 10px;
+  height: auto !important;
 }
 .img-slider-wrapper .img-slider .slide .info {
   position: absolute;
@@ -251,6 +386,70 @@ nav ul li a:hover {
   cursor: pointer;
 }
 
+@media (max-width: 480px) {
+  #produtos h3 {
+    margin-top: 80px;
+    font-size: 1.5rem;
+    color: #64655b;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 1.5rem;
+  }
+  #produtos h4 {
+    text-align: center;
+    list-style-type: 2.2rem;
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+    margin-inline: 2rem;
+    font-weight: 200;
+  }
+  #produtos p {
+    font-size: 1.3636363636rem;
+    line-height: 2rem;
+    color: #64655b;
+    margin-inline: 2rem;
+  }
+  #produtos .img-slider-wrapper {
+    max-width: 100%;
+  }
+  #produtos .img-slider-wrapper .img-slider {
+    height: 400px;
+    position: relative;
+  }
+  #produtos .img-slider-wrapper .img-slider .slide {
+    z-index: 1;
+    position: absolute;
+  }
+  #produtos .img-slider-wrapper .img-slider .slide img {
+    width: 350px;
+    height: 300px;
+  }
+  #produtos .img-slider-wrapper .img-slider .slide .info {
+    padding: 10px 15px;
+  }
+  #produtos .img-slider-wrapper .img-slider .slide .info h2 {
+    font-size: 30px;
+  }
+  #produtos .img-slider-wrapper .img-slider .slide .info .slide-p {
+    width: 60%;
+    font-size: 15px;
+  }
+  #produtos .img-slider-wrapper .img-slider .navigation {
+    z-index: 2;
+    position: absolute;
+    display: flex;
+    bottom: 25%;
+    transform: translateX(-50%);
+  }
+  #produtos .img-slider-wrapper .img-slider .navigation .btn {
+    background: rgba(255, 255, 255, 0.5);
+    width: 12px;
+    height: 12px;
+    margin: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
 footer {
   text-align: center;
   font-size: 1.5rem;
