--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,7 +163,7 @@ nav ul li a:hover {
     width: 100%;
   }
   #servicos .cards .card {
-    width: 300px;
+    width: 350px;
     text-align: center;
     padding-bottom: 1.5rem;
     font-size: 1.1111111111rem;
@@ -310,16 +310,23 @@ nav ul li a:hover {
   text-transform: uppercase;
   font-weight: 400;
   text-align: center;
+  border-bottom: 1px solid #566134;
+  padding: 1rem;
   margin: 1rem;
 }
-#produtos h4 {
+#produtos h3 hr {
+  border-top: 1px solid black;
+}
+
+h4 {
   text-align: center;
   font-size: 2.3076923077rem;
   margin-bottom: 20px;
   font-weight: 300;
   color: #566134;
 }
-#produtos p {
+
+p {
   font-size: 1.2rem;
   text-align: center;
   font-weight: 300;
@@ -363,7 +370,7 @@ nav ul li a:hover {
   font-weight: 600;
   letter-spacing: 3px;
 }
-.img-slider-wrapper .img-slider .slide .info .slide-p {
+.img-slider-wrapper .img-slider .slide .info .produto-p {
   color: #e9f1ec !important;
   background: rgba(0, 0, 0, 0.1) !important;
   font-size: 20px !important;
@@ -408,7 +415,8 @@ nav ul li a:hover {
     font-size: 1.5rem;
     line-height: 2rem;
     color: #64655b;
-    margin-inline: 2rem;
+    margin-inline: 1rem;
+    text-align: center;
   }
   #produtos .img-slider-wrapper {
     max-width: 100%;
@@ -427,7 +435,7 @@ nav ul li a:hover {
     height: 300px;
   }
   #produtos .img-slider-wrapper .img-slider .slide .info {
-    padding: 10px 15px;
+    padding: 8px 15px;
   }
   #produtos .img-slider-wrapper .img-slider .slide .info h2 {
     font-size: 30px;
@@ -435,12 +443,13 @@ nav ul li a:hover {
   #produtos .img-slider-wrapper .img-slider .slide .info .slide-p {
     width: 60%;
     font-size: 15px;
+    text-align: left;
   }
   #produtos .img-slider-wrapper .img-slider .navigation {
     z-index: 2;
     position: absolute;
     display: flex;
-    bottom: 25%;
+    bottom: 15%;
     transform: translateX(-50%);
   }
   #produtos .img-slider-wrapper .img-slider .navigation .btn {
