--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -20,18 +20,17 @@
 
   .cards {
     display: flex;
-    justify-content: space-evenly;
-    background-color: #eef9f393;
+    justify-content: center;
+    gap: 35px;
 
-    gap: 3rem;
     width: 100%;
 
     .card {
-      width: 400px;
+      width: 350px;
       text-align: center;
       padding-bottom: 1.5rem;
       font-size: $tamanho-do-texto / 2.2;
-      border: 1px solid rgba(255, 255, 255, 0.342);
+
       box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
       border-bottom-left-radius: 0.3rem;
       border-bottom-right-radius: 0.3rem;
@@ -41,17 +40,21 @@
         box-shadow: rgba(0, 0, 0, 0.307) 2px 10px 16px;
       }
       h5 {
-        font-size: $tamanho-do-texto / 1.5;
+        font-size: $tamanho-do-texto / 1.2;
         font-weight: 300;
         margin-top: 25px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         color: $cor-primaria;
+        text-align: left;
+        padding-inline: 2rem;
       }
       p {
-        font-size: $tamanho-do-texto / 2.2;
+        font-size: $tamanho-do-texto / 2.8;
         font-weight: 300;
         color: $cor-secundaria;
         line-height: 2rem;
+        padding-inline: 2rem;
+        text-align: left;
       }
 
       .img-container {
@@ -89,7 +92,6 @@
       justify-content: space-evenly;
       align-items: center;
       flex-direction: column;
-      background-color: #eef9f393;
 
       gap: 3rem;
       width: 100%;
